# usb-camera

./: .gitignore  CMakeLists.txt  Chat_GPT_USer_Detection_HowToGuide_DONOTSUBMITFORPROJ.txt  PortAudio_and_AubioMFCC_260330.c  PortAudio_and_AubioMFCC_260403.c  PortAudio_and_AubioMFCC_260407.c  README.md  User_Dectection_041326.c  User_Dectection_041326.h  User_Detection_041326.c  python_executor_demo.py  python_executor_image_demo.py  python_subprocess_test.py  v4l2_camera.cpp
